src/objects/PSA_Account_Discount__c.object
<CustomObject>
    <description>Contains account-level billing discount information</description>
    <fields>
        <fullName>PSA_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>PSA_Account_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the discount to be made inactive so that a different one may be applied to the account.</description>
        <inlineHelpText>Allows the discount to be made inactive so that a different one may be applied to the account.</inlineHelpText>
        <label>Credit Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Amount_Applied__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summary of past billed discount adjustments based on the account discount</description>
        <inlineHelpText>Summary of past billed discount adjustments based on the account discount</inlineHelpText>
        <label>Credit Amount Applied</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Amount_Remaining__c</fullName>
        <description>If a discount cap applies, the cap minus discount amount applied</description>
        <formula>IF( AND( NOT( ISBLANK( PSA_Discount_Cap__c ) ), NOT( PSA_Discount_Cap__c = 0 ) ), PSA_Discount_Cap__c +  PSA_Discount_Amount_Applied__c , null )</formula>
        <inlineHelpText>If a discount cap applies, the cap minus discount amount applied</inlineHelpText>
        <label>Credit Amount Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Billing_Levels__c</fullName>
        <description>For specifying one or more billing levels.  Discount will be based only on billings from assignments with the selected billing levels.
Options will consist of the defined Billing Levels</description>
        <inlineHelpText>For specifying one or more billing levels.  Discount will be based only on billings from assignments with the selected billing levels.
Options will consist of the defined Billing Levels</inlineHelpText>
        <label>Credit Billing Levels</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>105</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>110</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>130</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>140</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>220</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forecast Blended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Bill</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Cap__c</fullName>
        <description>Sum of accumulated discount credits billed, over which cumulative T&amp;M billings will no longer be subject to the discount. Optional.</description>
        <inlineHelpText>Sum of accumulated discount credits billed, over which cumulative T&amp;M billings will no longer be subject to the discount. Optional.</inlineHelpText>
        <label>Credit Cap</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Eligible_Billings_To_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summary of Discount Eligible Billings to Date from all related projects. Based on timecards for assignments with applicable billing levels that have billing events associated with them.</description>
        <inlineHelpText>Summary of Discount Eligible Billings to Date from all related projects. Based on timecards for assignments with applicable billing levels that have billing events associated with them.</inlineHelpText>
        <label>Credit Eligible Billings To Date</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_End_Date__c</fullName>
        <description>Date after which T&amp;M billings will no longer be subject to the discount. Optional.</description>
        <inlineHelpText>Date after which T&amp;M billings will no longer be subject to the discount. Optional.</inlineHelpText>
        <label>Credit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Percent__c</fullName>
        <description>The percentage to apply to monthly T&amp;M Billings as a discount</description>
        <inlineHelpText>The percentage to apply to monthly T&amp;M Billings as a discount</inlineHelpText>
        <label>Credit Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSA_Discount_Type__c</fullName>
        <description>The type of discount that applies to the account.</description>
        <inlineHelpText>The type of discount that applies to the account.</inlineHelpText>
        <label>Credit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Investment Credit with Carve-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Credit without Carve-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund from POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Credit with Carve-out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Credit without Carve-out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PSA Account Credit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Account__c</columns>
        <columns>PSA_Discount_Percent__c</columns>
        <columns>PSA_Discount_Type__c</columns>
        <columns>PSA_Discount_Cap__c</columns>
        <columns>PSA_Discount_End_Date__c</columns>
        <columns>PSA_Discount_Active__c</columns>
        <columns>PSA_Discount_Amount_Applied__c</columns>
        <columns>PSA_Discount_Amount_Remaining__c</columns>
        <columns>PSA_Discount_Eligible_Billings_To_Date__c</columns>
        <columns>PSA_Discount_Billing_Levels__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Account Discount Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Account Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PSA_Account_Credit_End_Date</fullName>
        <active>true</active>
        <description>The Credit End Date of the Account Credit must fall on the last day of the month</description>
        <errorConditionFormula>AND( 
  NOT( ISBLANK( PSA_Discount_End_Date__c ) ), 
  OR( 
    ISNEW(), 
    ISCHANGED( PSA_Discount_End_Date__c )
  ), 
  DAY( PSA_Discount_End_Date__c +1) != 1
)</errorConditionFormula>
        <errorDisplayField>PSA_Discount_End_Date__c</errorDisplayField>
        <errorMessage>The Account Credit End Date must fall on the last day of the month</errorMessage>
    </validationRules>
</CustomObject>